--- a/Flutter/agenda_de_contatos/pubspec.yaml
+++ b/Flutter/agenda_de_contatos/pubspec.yaml
@@ -1,6 +1,6 @@
 name: agenda_de_contatos
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -12,6 +12,7 @@ dependencies:
   sqflite: ^2.4.2
   path: ^1.9.1
   url_launcher: ^6.3.2
+  mask_text_input_formatter: ^2.9.0
   image_picker: ^1.2.0
 
 dev_dependencies:
